# compgrafica-transformacoes-poligono

./: .editorconfig  CMakeLists.txt  README.md
include/: matrix.h  polygon.h  transformation.h  window.h  window_callback.h
src/: main.cpp  matrix.cpp  transformation.cpp  window.cpp
